--- a/EVETool/ResourcePanel.resx
+++ b/EVETool/ResourcePanel.resx
@@ -153,6 +153,9 @@
   <data name="TierLabel.Font" type="System.Drawing.Font, System.Drawing">
     <value>Segoe UI, 9pt, style=Bold</value>
   </data>
+  <data name="TierLabel.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
   <data name="TierLabel.Location" type="System.Drawing.Point, System.Drawing">
     <value>26, 27</value>
   </data>
@@ -215,6 +218,9 @@
   </data>
   <data name="DesiredLabel.Font" type="System.Drawing.Font, System.Drawing">
     <value>Segoe UI, 9pt, style=Bold</value>
+  </data>
+  <data name="DesiredLabel.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
   </data>
   <data name="DesiredLabel.Location" type="System.Drawing.Point, System.Drawing">
     <value>26, 55</value>
@@ -321,6 +327,9 @@
   <data name="CalculateUsingLabel.Font" type="System.Drawing.Font, System.Drawing">
     <value>Segoe UI, 9pt, style=Bold</value>
   </data>
+  <data name="CalculateUsingLabel.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
   <data name="CalculateUsingLabel.Location" type="System.Drawing.Point, System.Drawing">
     <value>311, 43</value>
   </data>
@@ -356,6 +365,9 @@
   </data>
   <data name="label1.Font" type="System.Drawing.Font, System.Drawing">
     <value>Segoe UI, 9pt, style=Bold</value>
+  </data>
+  <data name="label1.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
   </data>
   <data name="label1.Location" type="System.Drawing.Point, System.Drawing">
     <value>536, 43</value>
@@ -423,6 +435,9 @@
   <data name="MassLabel.Font" type="System.Drawing.Font, System.Drawing">
     <value>Segoe UI, 9pt, style=Bold</value>
   </data>
+  <data name="MassLabel.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
   <data name="MassLabel.Location" type="System.Drawing.Point, System.Drawing">
     <value>681, 44</value>
   </data>
@@ -459,6 +474,9 @@
   <data name="QuantityUnits.Font" type="System.Drawing.Font, System.Drawing">
     <value>Segoe UI, 9pt, style=Bold</value>
   </data>
+  <data name="QuantityUnits.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
   <data name="QuantityUnits.Location" type="System.Drawing.Point, System.Drawing">
     <value>681, 43</value>
   </data>
@@ -488,6 +506,9 @@
   </data>
   <data name="BuildResult.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Popup</value>
+  </data>
+  <data name="BuildResult.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
   </data>
   <data name="BuildResult.Location" type="System.Drawing.Point, System.Drawing">
     <value>766, 19</value>
@@ -521,6 +542,9 @@
   </data>
   <data name="$this.AutoSizeMode" type="System.Windows.Forms.AutoSizeMode, System.Windows.Forms">
     <value>GrowAndShrink</value>
+  </data>
+  <data name="$this.MinimumSize" type="System.Drawing.Size, System.Drawing">
+    <value>860, 113</value>
   </data>
   <data name="$this.Size" type="System.Drawing.Size, System.Drawing">
     <value>860, 113</value>
