--- a/EVETool/ResourceWindow.resx
+++ b/EVETool/ResourceWindow.resx
@@ -127,16 +127,16 @@
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="ResourcePanel.Location" type="System.Drawing.Point, System.Drawing">
-    <value>12, 82</value>
+    <value>12, 85</value>
   </data>
   <data name="ResourcePanel.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>0, 0, 0, 25</value>
+    <value>0, 0, 3, 25</value>
   </data>
   <data name="ResourcePanel.MinimumSize" type="System.Drawing.Size, System.Drawing">
-    <value>851, 10</value>
+    <value>851, 300</value>
   </data>
   <data name="ResourcePanel.Size" type="System.Drawing.Size, System.Drawing">
-    <value>851, 10</value>
+    <value>851, 300</value>
   </data>
   <data name="ResourcePanel.TabIndex" type="System.Int32, mscorlib">
     <value>1</value>
@@ -160,7 +160,7 @@
     <value>NoControl</value>
   </data>
   <data name="Temperate.Location" type="System.Drawing.Point, System.Drawing">
-    <value>675, 12</value>
+    <value>676, 12</value>
   </data>
   <data name="Temperate.Size" type="System.Drawing.Size, System.Drawing">
     <value>64, 64</value>
@@ -187,7 +187,7 @@
     <value>NoControl</value>
   </data>
   <data name="Storm.Location" type="System.Drawing.Point, System.Drawing">
-    <value>605, 12</value>
+    <value>606, 12</value>
   </data>
   <data name="Storm.Size" type="System.Drawing.Size, System.Drawing">
     <value>64, 64</value>
@@ -214,7 +214,7 @@
     <value>NoControl</value>
   </data>
   <data name="Plasma.Location" type="System.Drawing.Point, System.Drawing">
-    <value>535, 12</value>
+    <value>536, 12</value>
   </data>
   <data name="Plasma.Size" type="System.Drawing.Size, System.Drawing">
     <value>64, 64</value>
@@ -241,7 +241,7 @@
     <value>NoControl</value>
   </data>
   <data name="Oceanic.Location" type="System.Drawing.Point, System.Drawing">
-    <value>465, 12</value>
+    <value>466, 12</value>
   </data>
   <data name="Oceanic.Size" type="System.Drawing.Size, System.Drawing">
     <value>64, 64</value>
@@ -268,7 +268,7 @@
     <value>NoControl</value>
   </data>
   <data name="Lava.Location" type="System.Drawing.Point, System.Drawing">
-    <value>395, 12</value>
+    <value>396, 12</value>
   </data>
   <data name="Lava.Size" type="System.Drawing.Size, System.Drawing">
     <value>64, 64</value>
@@ -298,7 +298,7 @@
     <value>NoControl</value>
   </data>
   <data name="Ice.Location" type="System.Drawing.Point, System.Drawing">
-    <value>325, 12</value>
+    <value>326, 12</value>
   </data>
   <data name="Ice.Size" type="System.Drawing.Size, System.Drawing">
     <value>64, 64</value>
@@ -328,7 +328,7 @@
     <value>NoControl</value>
   </data>
   <data name="Gas.Location" type="System.Drawing.Point, System.Drawing">
-    <value>255, 12</value>
+    <value>256, 12</value>
   </data>
   <data name="Gas.Size" type="System.Drawing.Size, System.Drawing">
     <value>64, 64</value>
@@ -358,7 +358,7 @@
     <value>NoControl</value>
   </data>
   <data name="Barren.Location" type="System.Drawing.Point, System.Drawing">
-    <value>185, 12</value>
+    <value>186, 12</value>
   </data>
   <data name="Barren.Size" type="System.Drawing.Size, System.Drawing">
     <value>64, 64</value>
@@ -408,31 +408,34 @@
   <data name="&gt;&gt;NewIndustryInter.ZOrder" xml:space="preserve">
     <value>10</value>
   </data>
-  <metadata name="statusStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <metadata name="statusStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
-  <data name="statusStrip1.Location" type="System.Drawing.Point, System.Drawing">
+  <data name="toolStripLabel.Size" type="System.Drawing.Size, System.Drawing">
+    <value>0, 17</value>
+  </data>
+  <data name="statusStrip.Location" type="System.Drawing.Point, System.Drawing">
     <value>0, 410</value>
   </data>
-  <data name="statusStrip1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>875, 22</value>
+  <data name="statusStrip.Size" type="System.Drawing.Size, System.Drawing">
+    <value>876, 22</value>
   </data>
-  <data name="statusStrip1.TabIndex" type="System.Int32, mscorlib">
+  <data name="statusStrip.TabIndex" type="System.Int32, mscorlib">
     <value>28</value>
   </data>
-  <data name="statusStrip1.Text" xml:space="preserve">
+  <data name="statusStrip.Text" xml:space="preserve">
     <value>statusStrip1</value>
   </data>
-  <data name="&gt;&gt;statusStrip1.Name" xml:space="preserve">
-    <value>statusStrip1</value>
+  <data name="&gt;&gt;statusStrip.Name" xml:space="preserve">
+    <value>statusStrip</value>
   </data>
-  <data name="&gt;&gt;statusStrip1.Type" xml:space="preserve">
+  <data name="&gt;&gt;statusStrip.Type" xml:space="preserve">
     <value>System.Windows.Forms.StatusStrip, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="&gt;&gt;statusStrip1.Parent" xml:space="preserve">
+  <data name="&gt;&gt;statusStrip.Parent" xml:space="preserve">
     <value>$this</value>
   </data>
-  <data name="&gt;&gt;statusStrip1.ZOrder" xml:space="preserve">
+  <data name="&gt;&gt;statusStrip.ZOrder" xml:space="preserve">
     <value>0</value>
   </data>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -445,7 +448,7 @@
     <value>GrowAndShrink</value>
   </data>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>875, 432</value>
+    <value>876, 432</value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -985,14 +988,17 @@
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA==
 </value>
   </data>
-  <data name="$this.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
-  </data>
   <data name="$this.StartPosition" type="System.Windows.Forms.FormStartPosition, System.Windows.Forms">
     <value>CenterScreen</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
     <value>Resource Planner</value>
+  </data>
+  <data name="&gt;&gt;toolStripLabel.Name" xml:space="preserve">
+    <value>toolStripLabel</value>
+  </data>
+  <data name="&gt;&gt;toolStripLabel.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripStatusLabel, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
     <value>ResourceWindow</value>
